chore: Mettre à jour les versions des dépendances et améliorer la gestion des chaînes de caractères